--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 
         gtag('config', 'UA-114357378-2');
     </script>
+    <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
