--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,17 @@
 <html lang="en">
 
 <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114357378-2"></script>
     <script>
+        var googleAnalyticsId = '{{GOOGLE_ANALYTICS_ID}}';
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-
-        gtag('config', 'UA-114357378-2');
+        gtag('config', googleAnalyticsId);
+        if (googleAnalyticsId !== '{{'+'GOOGLE_ANALYTICS_ID'+'}}') {
+            var scriptTag = document.createElement('script');
+            scriptTag.src = 'https://www.googletagmanager.com/gtag/js?id='+googleAnalyticsId;
+            document.body.appendChild(scriptTag);   
+        }
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
